# hchip

./: LICENSE  README.md  chip8.cabal  hie.yaml
app/: Main.hs  Types.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  solver-plan834-1.tmp  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.8.4/: chip8-0.1.0.0-inplace.conf  package.cache
lib/: Chip8.hs
lib/Chip8/: Internal.hs  ROM.hs  Types.hs
test/: Chip8Test.hs
